Fixed navbar spacing

--- a/src/Components/Navbar/style.css
+++ b/src/Components/Navbar/style.css
@@ -22,8 +22,8 @@
 
 .nav-menu {
     display: grid;
-    grid-template-columns: repeat(5, auto);
-    grid-gap: 10px;
+    grid-template-columns: repeat(4, auto);
+    grid-gap: 40px;
     list-style: none;
     text-align: center;
     width: 70vw;
